Bug 166004 - Graphical indication of plasma widget locking does not work reliably
Summary: Graphical indication of plasma widget locking does not work reliably
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-07-08 00:32 UTC by AE
Modified: 2008-07-14 02:22 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
A patch to fix the problem (1.41 KB, patch)
2008-07-13 23:56 UTC, Alex Merry
Details

Note You need to log in before you can comment on or make changes to this bug.
Description AE 2008-07-08 00:32:57 UTC
Version:            (using Devel)
Installed from:    Compiled sources
Compiler:          gcc-4.3.1 
OS:                Linux

Sometimes, the config handles of the plasma widgets will show up even when widgets are locked. The handles don't seem to be operational though.
How to reproduce:
1) Unlock widgets.
2) Move mouse cursur over a widget and draw away _before_ handles appear.
3) Lock widgets
4) Move cursor again to the same widget. The handles will appear, just once.

Congrats for the 4.0.85 snapshot btw! Today I switched permanently from 3.5.
Comment 1 AE 2008-07-08 00:34:39 UTC
Oh, and I encountered the problem with snapshot 4.0.85 on Gentoo Linux, with the ebuilds from the kdesvn-portage repository.
Comment 2 AE 2008-07-08 00:37:48 UTC
Correction to what I claimed before: The handles _are_ operational. I just didn't catch them before disappearing up till now.
Comment 3 Florian Sievert 2008-07-08 10:57:29 UTC
I can confirm this on 4.0.85 (fedora). After using the handles or moving out again the widget seems to be locked finally. Maybe all handle drawings should be interrupted after they had been locked.
Comment 4 Alex Merry 2008-07-13 23:56:52 UTC
Created attachment 26096 [details]
A patch to fix the problem

Proposed fix.  Also sent to panel-devel.

Currently, when hovering over an applet, a handle is created if the applet is
mutable.  This patch destroys any existing handle if the applet is immutable.
Comment 5 Alex Merry 2008-07-14 02:22:42 UTC
SVN commit 832059 by alexmerry:

Clear handles when we go immutable.  Also remove an out-of-date TODO.

BUG: 166004

CCMAIL: panel-devel@kde.org
Should be backported.



 M  +7 -2      containment.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=832059