Clear handles when we go immutable.  Also remove an out-of-date TODO.

BUG: 166004

CCMAIL: panel-devel@kde.org
Should be backported.


svn path=/trunk/KDE/kdebase/workspace/libs/plasma/; revision=832059